--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/user
+MONGODB_URI=mongodb+srv://mandikishore2000_db_user:1234@cluster0.crbdiag.mongodb.net/?appName=Cluster0
 JWT_SECRET=online_exam_secret
