--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.8.4",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.536.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
-    "tailwindcss": "^4.1.18"
+    "recharts": "^3.7.0",
+    "tailwindcss": "^4.1.18",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
