--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@vladmandic/face-api": "^1.7.15",
     "axios": "^1.8.4",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
