--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "set NODE_OPTIONS=--max-old-space-size=4096 && eslint . --config .eslintrc.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.34.2",
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
